--- a/HotelASP.NET/appsettings.json
+++ b/HotelASP.NET/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Login_HotelConnection": "Server=YOUR_SERVER;Database=Login_Hotel;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
