--- a/HotelASP.NET/appsettings.json
+++ b/HotelASP.NET/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Login_HotelConnection": "Server=YOUR_SERVER;Database=Login_Hotel;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "Login_HotelConnection": "Server=DESKTOP-DEBD1DU;Database=Login_Hotel;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+    }
 }
