Revert "change localhost line to connect"
This reverts commit a3351c1063b8c3cf304798d897dd06e8261e0a57.

--- a/HotelASP.NET/appsettings.json
+++ b/HotelASP.NET/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Login_HotelConnection": "Server=localhost;Database=Login_Hotel;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+        "Login_HotelConnection": "Server=DESKTOP-DEBD1DU;Database=Login_Hotel;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
     }
 }
