--- a/HotelASP.NET/appsettings.json
+++ b/HotelASP.NET/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "Login_HotelConnection": "Server=localhost;Database=Login_Hotel;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
-    }
+  "ConnectionStrings": {
+    "Login_HotelConnection": "Server=HP_PAVILION\\MSSQLSERVER02;Database=Login_Hotel;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  }
 }
